[package]
name = "tree2tui"
version = "0.1.0"
authors = ["hhggit <zh.xz@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indextree = "4.3.1"
anyhow = "1.0.35"
regex = "1.4.2"
once_cell = "1.5.2"
cursive_tree_view = "0.6.0"
cursive = "0.14.1"
console = "0.13.0"
clap = "3.0.0-beta.2"
