[package]
name = "tree2tui"
version = "0.1.1"
authors = ["hhggit <zh.xz@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indextree = { git = "https://github.com/hhggit/indextree.git", branch = "get_node_id" }
anyhow = "1.0.39"
regex = "1.4.5"
once_cell = "1.7.2"
cursive_tree_view = "0.7.0"
cursive = { version = "0.16.3", default-features = false, features = ["crossterm-backend"] }
console = "0.14.1"
clap = "3.0.0-beta.2"
syn = "1.0.64"
