[package]
name = "tree2tui"
version = "0.1.2"
authors = ["hhggit <zh.xz@outlook.com>"]
edition = "2018"
description = "This crate provides a command line tool to build a Terminal UI (*TUI*) for `tree` like command, aiming to enable folding/expanding tree nodes for large/complex tree."
readme = "README.md"
license = "MIT"
repository = "https://github.com/hhggit/tree2tui"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indextree = { version = "4.3.1", git = "https://github.com/hhggit/indextree.git", rev = "8b5d1bd6f81376868dca8d231322c97384b6b396" }
anyhow = "1.0.39"
regex = "1.4.5"
once_cell = "1.7.2"
cursive_tree_view = "0.7.0"
cursive = { version = "0.16.3", default-features = false, features = ["crossterm-backend"] }
console = "0.14.1"
clap = "3.0.0-beta.2"
